// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus Subscription Billing Schematics: ng-add Subscription Billing feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { SubscriptionBillingModule } from "@spartacus/subscription-billing";
import { subscriptionBillingTranslationChunksConfig, subscriptionBillingTranslationsEn } from "@spartacus/subscription-billing/assets";
import { SubscriptionBillingRootModule } from "@spartacus/subscription-billing/root";

@NgModule({
  declarations: [],
  imports: [
    SubscriptionBillingRootModule,
    SubscriptionBillingModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: subscriptionBillingTranslationsEn },
      chunks: subscriptionBillingTranslationChunksConfig,
    },
  })]
})
export class SubscriptionBillingFeatureModule { }
"
`;

exports[`Spartacus Subscription Billing Schematics: ng-add Subscription Billing feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { subscriptionBillingTranslationChunksConfig, subscriptionBillingTranslationsEn } from "@spartacus/subscription-billing/assets";
import { SUBSCRIPTION_BILLING_FEATURE, SubscriptionBillingRootModule } from "@spartacus/subscription-billing/root";

@NgModule({
  declarations: [],
  imports: [
    SubscriptionBillingRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [SUBSCRIPTION_BILLING_FEATURE]: {
        module: () =>
          import('@spartacus/subscription-billing').then((m) => m.SubscriptionBillingModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: subscriptionBillingTranslationsEn },
      chunks: subscriptionBillingTranslationChunksConfig,
    },
  })
  ]
})
export class SubscriptionBillingFeatureModule { }
"
`;
